[package]
name = "pbj"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "Command line declarative software development project generator."
homepage = "https://pbj.rodeo"
repository = "https://github.com/electric-hand/pbj"
readme = "README.adoc"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
colog = "1.3.0"
dirs = "5.0.1"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
