[package]
name = "pbj"
version = "0.2.2"
edition = "2021"
license-file = "LICENSE"
description = "Command line utility for generating tdd projects from declarative configurations."
homepage = "http://pbj.rodeo"
repository = "https://github.com/electric-hand/pbj"
readme = "docs/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["tdd", "softwaredev", "programming"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
colog = "1.3.0"
dirs = "5.0.1"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
